# slider

./: .gitignore  CMakeLists.txt  README.md  budget.ods  config_outputs.sh
3d/: 20325.stp  User Library-18650 FullHolder X1.STEP  User Library-18650 holder x2.step  User Library-18650-1.step  User Library-NEMA17_MOTOR.step  bearing.fcstd  line.fcstd  line.fcstd1  model.fcstd  model.fcstd1  nema 14.prt
resources/: model.odg
slider/: 2  CMakeLists.txt  cart.cpp  cart.h  context.cpp  context.h  main.cpp  manage_execution.cpp  manage_execution.h  parse.cpp  parse.h  status.h
web/: index.html  java.js  server.js  style.css
